# QtSimPanel

./: CMakeLists.txt  README.md
exe/bin_GNU-Linux-x86/: .qmake.stash  QtSimPanel  settings.ini
src/: KeyReceiver.cpp  KeyReceiver.h  QtSimPanel  QtSimPanel.cpp  QtSimPanel.h  QtSimPanel.pro  datastore.cpp  datastore.h  main.cpp  qml.qrc  udpclient.cpp  udpclient.h  xplaneudpclient.cpp  xplaneudpclient.h
src/qml/: Panel.qml  main.qml
src/qml/gauges/: Airspeed.qml  Altimeter.qml  ArtificialHorizon.qml  CourseDeviationIndicator.qml  HeadingIndicator.qml  TurnCoordinator.qml  VerticalSpeed.qml
src/qml/panels/: dr400.qml  simple_cdi.qml
